@@ -70,6 +70,7 @@ import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Calendar;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
@@ -299,9 +300,9 @@ public class NameGenerator
         return _container;
     }
 
-    public record SampleNameExpressionSummary(boolean hasProjectSampleCounter, boolean hasProjectSampleRootCounter, long minProjectSampleCounter, long minProjectSampleRootCounter) {};
+    public record SampleNameExpressionSummary(boolean hasProjectSampleCounter, boolean hasProjectSampleRootCounter, long minProjectSampleCounter, long minProjectSampleRootCounter) {}
 
-    public record ExpressionSummary(SampleNameExpressionSummary sampleSummary, boolean hasDateBasedSampleCounter, boolean hasParentInputs, boolean hasParentLookup, boolean hasAncestorSearch) {};
+    public record ExpressionSummary(SampleNameExpressionSummary sampleSummary, boolean hasDateBasedSampleCounter, boolean hasParentInputs, boolean hasParentLookup, boolean hasAncestorSearch) {}
 
     // extracted from name expression after parsing
     private ExpressionSummary _expressionSummary;
@@ -707,7 +708,7 @@ public class NameGenerator
             }
 
             if (!openIndexes.isEmpty())
-                unmatchedOpen.addAll(openIndexes.stream().map(index -> index+1).collect(Collectors.toList()));
+                unmatchedOpen.addAll(openIndexes.stream().map(index -> index+1).toList());
             start = subInd;
         }
         if (!unmatchedOpen.isEmpty())
@@ -779,9 +780,8 @@ public class NameGenerator
                 }
             }
         }
-        else if (value instanceof Collection)
+        else if (value instanceof Collection<?> coll)
         {
-            Collection<?> coll = (Collection)value;
             values = coll.stream().map(String::valueOf);
         }
         else if (value instanceof JSONArray jsonArray)
@@ -809,12 +809,7 @@ public class NameGenerator
         if (!isParentInputToken(fieldParts.get(0), importAliases, false))
             return false;
 
-        if (fieldParts.size() == 2 && isParentInputWithDataType(fieldParts.toArray(String[]::new), currentDataTypeName, false, container, user))
-        {
-            return false;
-        }
-
-        return true;
+        return fieldParts.size() != 2 || !isParentInputWithDataType(fieldParts.toArray(String[]::new), currentDataTypeName, false, container, user);
     }
 
     public static boolean isAncestorSearch(List<String> fieldParts, @Nullable Map<String, String> importAliases, Container container, User user)
@@ -1144,7 +1139,10 @@ public class NameGenerator
                 for (SubstitutionFormat format : formats)
                 {
                     if (format == dailySampleCount || format == weeklySampleCount || format == monthlySampleCount || format == yearlySampleCount)
+                    {
                         hasDateBasedSampleCounterFormat = true;
+                        break;
+                    }
                 }
 
                 String sTok = QueryKey.decodePart(token.toString());
@@ -1206,7 +1204,7 @@ public class NameGenerator
                                 }
 
                                 if (!isColPresent)
-                                    _syntaxErrors.add("Invalid substitution token: ${" + token.toString() + "}.");
+                                    _syntaxErrors.add("Invalid substitution token: ${" + token + "}.");
                                 else if (pt != null)
                                     previewCtx.put(fieldName, getNamePartPreviewValue(pt, fieldName));
                             }
@@ -1325,7 +1323,7 @@ public class NameGenerator
                 List<String> fieldParts = fieldKey.getParts();
 
                 if (hasParentInputs && fieldParts.size() == 3)
-                    continue;;
+                    continue;
 
                 assert _validateSyntax || fieldParts.size() == 2;
 
@@ -1414,7 +1412,7 @@ public class NameGenerator
                 {
                     if (!lookupExist)
                     {
-                        _syntaxErrors.add("Lookup field does not exist: " + fieldKey.toString());
+                        _syntaxErrors.add("Lookup field does not exist: " + fieldKey);
                     }
                     else if (pt != null)
                     {
@@ -1844,7 +1842,7 @@ public class NameGenerator
             _parsedExpression = new ArrayList<>();
             int start = 0;
             int openIndex;
-            int openCount = 0;
+            int openCount;
             final String openTag = "${";
             final String closeTag = "}";
 
@@ -1911,7 +1909,6 @@ public class NameGenerator
          *
          * @param context The map of values to evaluate from
          * @param prefixCounterSequences if prefixCounterSequences is null, dont' use cache. Otherwise, put counter DBSequence in cache for reuse
-         * @return
          */
         public String eval(Map context, @Nullable Map<String, Map<String, DbSequence>> prefixCounterSequences)
         {
@@ -2015,7 +2012,7 @@ public class NameGenerator
         private DbSequence getCounterSeq(String prefixRaw, @Nullable Map<String, DbSequence> counterSequences, boolean noCache)
         {
             String prefix = prefixRaw.trim().toLowerCase(); // Issue 49338: withCounter should be case-insensitive
-            DbSequence counterSeq = null;
+            DbSequence counterSeq;
             if (noCache || !counterSequences.containsKey(prefix))
             {
                 long existingCount = -1;
@@ -2065,7 +2062,7 @@ public class NameGenerator
 
 
                 boolean noCache = counterSequences == null;
-                DbSequence counterSeq = null;
+                DbSequence counterSeq;
 
                 if (_strictIncremental || ExperimentService.get().useStrictCounter())
                 {
@@ -2166,7 +2163,7 @@ public class NameGenerator
         @Test
         public void testDateFormats()
         {
-            Date d = new GregorianCalendar(2011, 11, 3, 8, 30, 15).getTime();
+            Date d = new GregorianCalendar(2011, Calendar.DECEMBER, 3, 8, 30, 15).getTime();
             java.sql.Date donly = new java.sql.Date(d.getTime());
             Time t = new Time(d.getTime());
             Map<String, Object> m = new HashMap<>();
